@@ -2,7 +2,8 @@
   * Release ImageMagick version 7.0.9-18, GIT revision 16...
 
 2020-01-19  7.0.9-18 Cristy  <quetzlzacatenango@image...>
-  * Alpha draw primitive no longer returns a parser exception
+  * Alpha draw primitive no longer returns a parser exception.
+  * Support 32-bit tiles TIFF images.
 
     https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37391).
 2020-01-18  7.0.9-17 Cristy  <quetzlzacatenango@image...>
